This file documents the revision history for Perl extension Catalyst.

5.7000   2006-07-06 19:42:00
	- Further doc work.
	- Minor code cleanups 
	- Changed catalyst.pl to depend on Catalyst::Devel

5.70_03  2006-06-28 16:42:00
        - fixup to registered plugins debug at app startup
        - refactored Catalyst::Utils::home

5.70_02  2006-06-27 11:51:00
	- Updated tutorial.

5.70_01  2006-06-26 10:49:00

        - fixed a Catalyst::Base bug causing duplicate action registrations
        - modified DispatchTypes to support multiple registrations
        - added Catalyst::Runtime module as dist marker
        - added Catalyst::ActionChain and Chained DispatchType
        - removed retarded registration requirement in dispatcher
        - removed Module::Pluggable::Fast hack in favor of
          Module::Pluggable::Object
        - extended uri_for, added dispatcher->uri_for_action
        - added Catalyst::Base->action_for('methodname')
        - checked and tested :Args multimethod dispatch
        - added ability to set action attributes from controller config
        - added merge_config_hashes() as a convenience method
        - Swapped out CGI::Cookie in favour of CGI::Simple::Cookie
        - Removed test dependencies on Test::NoWarnings, Test::MockObject
        - Removed dependency on UNIVERSAL::require
        - Split out Catalyst::Helper into a new distribution
        - un-bundled the plugins as they are now pre-reqs for Catalyst::Helper
        - nuked each() out of core with prejudice (due to lurking buglets)
        - Added tests from phaylon for dispatcher precedence
        - Use Class::Inspector->loaded($class) instead of $class->can('can')
        - Added ActionClass attribute
        - Removed Test::WWW::Mechanize::Catalyst from Makefile.PL (circular dep)
        - Updated docs for Catalyst::Component
        - Separated execute and dispatch on Catalyst::Action
        - cleaned up logging and debug output
	- significant documentation revisions